--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- Outlined Text -->
   <div class="text-overlay">
      <span class="large">jamesbrownv.com</span><br>
-     <a href="/hub.html" <span class="small">currently a work in progress</a>
+     <a href="/globe.html" <span class="small">currently a work in progress</a>
   </div>
 
 </body>
