--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
   <!-- Outlined Text -->
   <div class="text-overlay">
      <span class="large">jamesbrownv.com</span><br>
-     <a href="/globe.html" <span class="small">currently a work in progress</a>
+     <a href="/globe.html"><span class="small">currently a work in progress</a></span><br>
+     <a href="/hub.html"><span class="small">Click here to continue</span></a></div><br>
+     <a href="/blog/">Read my blog</a>
+      <span class="small">© 2024 James Brown</span>
+
   </div>
 
 </body>
