restore site safely

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
      <span class="large">jamesbrownv.com</span><br>
      <a href="/globe.html"><span class="small">currently a work in progress</a></span><br>
      <a href="/hub.html"><span class="small">Click here to continue</span></a></div><br>
-     <a href="/blog/">Read my blog</a>
+     <a href="/blog/"><span class="small">Read my blog</span></a></div><br>
       <span class="small">© 2024 James Brown</span>
 
   </div>
