cleaning up AIs mess

--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
 </head>
 <body>
 
-  <!-- Reel BG -->
-  <div class="background-reel">
-    <img src="photo1.jpg" />
-    <img src="photo2.jpg" />
-    <img src="photo3.jpg" />
-    <img src="photo4.jpg" />
-    <img src="photo5.jpg" />
-    <!-- Repeat again to make smooth loop -->
-    <img src="photo1.jpg" />
-    <img src="photo2.jpg" />
-    <img src="photo3.jpg" />
-    <img src="photo4.jpg" />
-    <img src="photo5.jpg" />
-  </div>
+<!-- Reel BG -->
+<div class="background-reel">
+  <img src="/images/site/photo1.jpg" />
+  <img src="/images/site/photo2.jpg" />
+  <img src="/images/site/photo3.jpg" />
+  <img src="/images/site/photo4.jpg" />
+  <img src="/images/site/photo5.jpg" />
+  <!-- Repeat again to make smooth loop -->
+  <img src="/images/site/photo1.jpg" />
+  <img src="/images/site/photo2.jpg" />
+  <img src="/images/site/photo3.jpg" />
+  <img src="/images/site/photo4.jpg" />
+  <img src="/images/site/photo5.jpg" />
+</div>
 
   <!-- Outlined Text -->
   <div class="text-overlay">
