--- a/index.html
+++ b/index.html
@@ -95,14 +95,13 @@
 </div>
 
   <!-- Outlined Text -->
-  <div class="text-overlay">
-     <span class="large">jamesbrownv.com</span><br>
-     <a href="/globe.html"><span class="small">currently a work in progress</a></span><br>
-     <a href="/hub.html"><span class="small">Click here to continue</span></a></div><br>
-     <a href="/blog/index.md"><span class="small">Read my blog</span></a></div><br>
-      <span class="small">© 2024 James Brown</span>
-
-  </div>
+ <div class="text-overlay">
+  <span class="large">jamesbrownv.com</span><br>
+  <a href="pages/globe.html"><span class="small">currently a work in progress</span></a><br>
+  <a href="/pages/hub.html"><span class="small">Click here to continue</span></a><br>
+  <a href="/blog/index.html"><span class="small">Read my blog</span></a><br>
+  <span class="small">© 2024 James Brown</span>
+</div>
 
 </body>
 </html>
